--- a/styles.css
+++ b/styles.css
@@ -29,22 +29,35 @@ body {
 
 h1 {
   width: 100%;
-  margin: 30px auto;
+  margin: 50px auto;
   font-family: "Caveat", cursive;
   text-align: center;
-  font-size: 3rem;
+  font-size: 3.2rem;
+}
+
+h2 {
+  width: 100%;
+  margin: auto;
+  font-family: "Caveat", cursive;
+  text-align: center;
+  font-size: 2.8rem;
 }
 
 p {
   width: 100%;
-  margin: 30px auto;
+  margin: 50px auto;
   font-family: "Caveat", cursive;
   text-align: center;
   font-size: 2rem;
 }
 
+.prologue {
+  height: 100vh;
+  width: 100%;
+}
+
 .msg_box {
-  margin: 30px auto;
+  margin: 50px auto;
   border: dashed 4px #00a1e9;
   border-radius: 8px;
   box-shadow: 0 0 0 10px #fff6e6;
@@ -89,7 +102,7 @@ p {
   background-size: 8px 100%, 100% 2em;
   line-height: 2;
   padding: 4px 10px 22px 10px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   text-align: center;
 }
 
@@ -97,8 +110,8 @@ p {
 scroll_up ｜下から上へ出現
 ----------------------------*/
 .scroll_up {
-  transition: 0.8s ease-in-out;
-  transform: translateY(30px);
+  transition: 1.2s ease-in-out;
+  transform: translateY(50px);
   opacity: 0;
 }
 
@@ -111,11 +124,11 @@ scroll_up ｜下から上へ出現
   scroll_left ｜左から出現
   ----------------------------*/
 .scroll_left {
-  -webkit-transition: 0.8s ease-in-out;
-  -moz-transition: 0.8s ease-in-out;
-  -o-transition: 0.8s ease-in-out;
-  transition: 0.8s ease-in-out;
-  transform: translateX(-30px);
+  -webkit-transition: 1.2s ease-in-out;
+  -moz-transition: 1.2s ease-in-out;
+  -o-transition: 1.2s ease-in-out;
+  transition: 1.2s ease-in-out;
+  transform: translateX(-50px);
   opacity: 0;
   filter: alpha(opacity=0);
   -moz-opacity: 0;
@@ -132,11 +145,11 @@ scroll_up ｜下から上へ出現
   scroll_right ｜右から出現
   ----------------------------*/
 .scroll_right {
-  -webkit-transition: 0.8s ease-in-out;
-  -moz-transition: 0.8s ease-in-out;
-  -o-transition: 0.8s ease-in-out;
-  transition: 0.8s ease-in-out;
-  transform: translateX(30px);
+  -webkit-transition: 1.2s ease-in-out;
+  -moz-transition: 1.2s ease-in-out;
+  -o-transition: 1.2s ease-in-out;
+  transition: 1.2s ease-in-out;
+  transform: translateX(50px);
   opacity: 0;
   filter: alpha(opacity=0);
   -moz-opacity: 0;
@@ -154,12 +167,13 @@ scroll_up ｜下から上へ出現
 ul.img_box {
   width: 100%;
   max-width: 560px;
-  margin: 0 auto;
+  min-height: 100vh;
+  margin: 600px auto;
   list-style: none;
 }
 
 ul.img_box li {
-  margin-bottom: 400px;
+  margin-bottom: 100px;
   & img {
     max-width: 100%;
   }
