--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,68 @@ ul {
 
 @import url(https://fonts.googleapis.com/css2?family=Marcellus&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Caveat&display=swap);
+
+#polaroids {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#polaroids li {
+  width: 70%;
+  margin: auto;
+  list-style: none;
+}
+
+#polaroids li a {
+  position: relative;
+  float: left;
+  padding: 20px;
+  background-color: white;
+  -moz-box-shadow: 0 4px 10px #333;
+  -webkit-box-shadow: 0 4px 10px #333;
+  box-shadow: 0 4px 10px #333;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  transform: rotate(5deg);
+  margin: auto;
+}
+
+#polaroids li a img {
+  width: 100%;
+}
+
+#polaroids li a p {
+  font-size: 2rem;
+  margin: 15px 0 0 0;
+}
+
+#polaroids li:nth-child(2n + 1) a {
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+  position: relative;
+  top: -5px;
+}
+
+#polaroids li:nth-child(3) a {
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  transform: rotate(30deg);
+  position: relative;
+  top: -10px;
+  left: 30px;
+}
+
+#polaroids li:nth-child(4) a {
+  position: relative;
+  top: -10px;
+  left: 10px;
+}
+
+#polaroids a:after {
+  content: attr(title);
+  font-family: "Hina2ndGrade", sans-serif;
+  color: #333;
+}
