--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ h1 {
   margin: 50px auto;
   font-family: "Caveat", cursive;
   text-align: center;
-  font-size: 3.2rem;
+  font-size: 3.2em;
 }
 
 h2 {
@@ -40,7 +40,7 @@ h2 {
   margin: auto;
   font-family: "Caveat", cursive;
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 2.8em;
 }
 
 p {
@@ -48,12 +48,13 @@ p {
   margin: 50px auto;
   font-family: "Caveat", cursive;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2em;
 }
 
 .prologue {
   height: 100vh;
   width: 100%;
+  margin: auto;
 }
 
 .msg_box {
@@ -68,12 +69,12 @@ p {
   max-width: 560px;
 }
 
-.msg_box-title {
+.msg_title {
   background: #fff6e6;
   border-radius: 8px 8px 0 0;
   margin: -20px -20px 5px -20px;
-  font-size: 1.3em;
-  padding: 10px 0 10px 0;
+  font-size: 2.4rem;
+  padding: 24px 0 10px 0;
   color: #00a1e9;
   font-weight: bold;
   text-align: center;
@@ -99,10 +100,10 @@ p {
       rgba(237, 119, 128, 0) 95%,
       #0075c2 100%
     );
-  background-size: 8px 100%, 100% 2em;
+  background-size: 8px 100%, 100% 3.6rem;
   line-height: 2;
-  padding: 4px 10px 22px 10px;
-  font-size: 1.8rem;
+  padding: 4px 10px 18px 10px;
+  font-size: 1.6rem;
   text-align: center;
 }
 
@@ -168,7 +169,10 @@ ul.img_box {
   width: 100%;
   max-width: 560px;
   min-height: 100vh;
-  margin: 600px auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   list-style: none;
 }
 
@@ -209,13 +213,14 @@ ul {
 
 #polaroids {
   width: 100%;
+  margin: 500px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 #polaroids li {
-  width: 70%;
+  width: 55%;
   margin: auto;
   list-style: none;
 }
@@ -224,7 +229,7 @@ ul {
   position: relative;
   float: left;
   padding: 20px;
-  background-color: white;
+  background-color: #fff6e6;
   -moz-box-shadow: 0 4px 10px #333;
   -webkit-box-shadow: 0 4px 10px #333;
   box-shadow: 0 4px 10px #333;
@@ -239,7 +244,7 @@ ul {
 }
 
 #polaroids li a p {
-  font-size: 2rem;
+  font-size: 2em;
   margin: 15px 0 0 0;
 }
 
