--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 .login-box {
   background: #fff;
-  padding: 40px;
+  padding: 20px;
   border-radius: 10px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
@@ -41,7 +41,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1em;
-  margin-top: 10px;
+  margin: 10px;
 }
 .login-box button {
   padding: 10px 20px;
@@ -51,7 +51,7 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 10px;
+  margin-top: 20px;
   transition: background-color 0.3s;
 }
 .login-box button:hover {
@@ -207,9 +207,9 @@ body {
   /* スマホでは1列、幅380px以上なら2列 */
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px; /* カード間の隙間 */
-  width: 90%;
+  width: 70%;
   max-width: 600px;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 /* メンバーカード */
